--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://postgres:JqEucRfHjjg0S3uo@db.wthhsfxgrsrvopkuzgsq.supabase.co:5432/postgres"
+AUTH_GITHUB_ID="4c39839eb9c930542baa"
+AUTH_GITHUB_SECRET="e721d57274142a7aa61841db1fc39fa4867605f1"
+NEXTAUTH_SECRET=v5pVEOAjrDFdsvHmTWVtT4/00uN1kE5pP1n0D+3/tdw=
+NEXTAUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y2xhc3NpYy10ZWFsLTU3LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_VlNKB8RJPXhhXENMXtOjO8Un0s2onApqkY9djecaTF
