--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.26.9",
+    "@clerk/nextjs": "^4.27.1",
     "@prisma/client": "^5.6.0",
+    "@supabase/supabase-js": "^2.38.4",
     "next": "14.0.2",
-    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18"
   },
